2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.14 release

2009-07-13  Mark Ellis  <mark@mpellis.org.uk>

	* require pyrex >= 0.9.6

2009-04-14  Mark Ellis  <mark@mpellis.org.uk>

	* matchmaker - break code into more useful functions, make usage
	  of command line tool clearer
	* lib/syncmgr.{c,h} - protect internal type data
	* python/pyrra.pyx - add pydocs, export constants, throw exceptions
	  on errors
	* check returns of various file read/writes
	* pass timezone info to recurrence routines
	* calculate actual start date for recurrence pattern

2009-04-11  Mark Ellis  <mark@mpellis.org.uk>

	* lib/matchmaker.c - remove unused code, access SynceInfo through
	  existing rapi connection
	* get local IP for SyncMgr from default connection if no explicit
	  connection given
	* add debug option to synce-matchmaker, rra-subscribe and rra-delete
	* fix complier warnings in pyrra

2009-04-10  Mark Ellis  <mark@mpellis.org.uk>

	* use synce_info_get_ functions to access SynceInfo
	* get device ip for syncmgr from rapi connection

2009-04-06  Mark Ellis  <mark@mpellis.org.uk>

	* add utf8 option to all conversion tools; add optional timezone
	  file to rra-appointment-from-vevent and rra-task-to-vtodo; add
	  debug level option to get-{types,ids,data} tools

2009-04-03  Mark Ellis  <mark@mpellis.org.uk>

	* specify an IP for SyncMgr to connect to, rather than all
	  interfaces
	* pyrra.pyx - rename __new__to __cinit__

2009-03-19  Mark Ellis  <mark@mpellis.org.uk>

	* add debug level option to conversion tools

2009-03-17  Mark Ellis  <mark@mpellis.org.uk>

	* add codepage parameter to all exported conversion functions,
	  should be the iconv name of the Windows codepage, currently
	  only used in Notes/Description field
	* add VCALENDAR container to VEVENT and VTODO containers
	* fix some compiler warnings
	* add codepage option to all conversion test programs, fix
	  parameter handling and update man pages

2009-03-11  Mark Ellis  <mark@mpellis.org.uk>
